# rosclips

./: .gitignore  CMakeLists.txt  package.xml  readme.MD
bridge/: CMakeLists.txt
bridge/include/: clips_bridge.h  utils.h
bridge/src/: clips_bridge.cpp
clips/: CMakeLists.txt
clipscontrol/: CMakeLists.txt  main.cpp  ncfilepickermw.cpp  ncurseswin.cpp  ncurseswin.h
clipswrapper/: CMakeLists.txt
clipswrapper/include/clipswrapper/udf/: retval.h  type.h  udf.h
clipswrapper/src/: clipswrapperrouter.cpp
server/: CMakeLists.txt  bridge.cpp  bridge.h  main.cpp
srv/: .gitignore  InitKDB.srv
testnode/: CMakeLists.txt  main.cpp
